join-us content updates

--- a/join-us/programs/index.html
+++ b/join-us/programs/index.html
@@ -11,8 +11,7 @@
           <div class="cat-ico"><img src="https://www.fiware.org/style/imgs/join-us/icons/icon-fiware-for-impact.svg" /></div>
             <div class="cat-content">
               <img class="cat-logo" src="https://www.fiware.org/style/imgs/join-us/badges/badge-fiware-for-impact.svg" />
-                <!-- <h4 class="cat-name">Powered by Context</h4> -->
-                <div class="cat-excerpt">Lorem ipsum dolor sit amet, consectetuer adipiscing elit aenean commodo ligula eget dolor aenean massa cum sociis natoque.</div>
+                <div class="cat-excerpt">Leverage our extensive reach and wide network. Benefit from discounted sponsorship opportunities, utilize our promotional offerings, and participate in leading international events to showcase your achievements on a global stage.</div>
                 <div class="icons">
                     <div class="cat-details" data-modal="0"><span id="ico-info" class="material-symbols-outlined">read_more</span> Read more</div>
                     <!-- <div><a class="cat-browse" href="https://www.fiware.org/showcase-/powered-by-fiware/" rel="noopener"><span id="ico-info" class="material-symbols-outlined">grid_view</span> Browse all</a></div> -->
@@ -29,8 +28,7 @@
           <div class="cat-ico"><img src="https://www.fiware.org/style/imgs/join-us/icons/icon-fiware-for-developers.svg" /></div>
             <div class="cat-content">
               <img class="cat-logo" src="https://www.fiware.org/style/imgs/join-us/badges/badge-fiware-for-developers.svg" />
-                <!-- <h4 class="cat-name">FIWARE-Ready</h4> -->
-                <div class="cat-excerpt">Lorem ipsum dolor sit amet, consectetuer adipiscing elit aenean commodo ligula eget dolor aenean massa cum sociis natoque.</div>
+                <div class="cat-excerpt">Expand your knowledge of our open-source software framework with exclusive FIWARE webinars and customized training sessions. Get priority access to technical support, quality assurance, and funding opportunities through the FIWARE Tech Expert Program.</div>
                 <div class="icons">
                     <div class="cat-details" data-modal="1"><span id="ico-info" class="material-symbols-outlined">read_more</span> Read more</div>
                     <!-- <div><a class="cat-browse" href="https://www.fiware.org/showcase/fiware-ready/" rel="noopener"><span id="ico-info" class="material-symbols-outlined">grid_view</span> Browse all</a></div> -->
@@ -48,8 +46,7 @@
           <div class="cat-ico"><img src="https://www.fiware.org/style/imgs/join-us/icons/icon-fiware-for-academia.svg" /></div>
             <div class="cat-content">
               <img class="cat-logo" src="https://www.fiware.org/style/imgs/join-us/badges/badge-fiware-for-academia.svg" />
-                <!-- <h4 class="cat-name">Showcase Cities</h4> -->
-                <div class="cat-excerpt">Lorem ipsum dolor sit amet, consectetuer adipiscing elit aenean commodo ligula eget dolor aenean massa cum sociis natoque.</div>
+                <div class="cat-excerpt">Join the FIWARE Scientific Advisory Board to help shape the strategic direction of FIWARE Foundation. Explore technological innovations and contribute to advancing FIWARE technology and scientific excellence.</div>
                 <div class="icons">
                     <div class="cat-details" data-modal="2"><span id="ico-info" class="material-symbols-outlined">read_more</span> Read more</div>
                     <!-- <div><a class="cat-browse" href="https://www.fiware.org/showcase/cities4cities/" rel="noopener"><span id="ico-info" class="material-symbols-outlined">grid_view</span> Browse all</a></div> -->
@@ -66,8 +63,7 @@
           <div class="cat-ico"><img src="https://www.fiware.org/style/imgs/join-us/icons/icon-fiware-for-growth.svg"/></div>
             <div class="cat-content">
               <img class="cat-logo" src="https://www.fiware.org/style/imgs/join-us/badges/badge-fiware-for-growth.svg" />
-                <!-- <h4 class="cat-name">Support Services</h4> -->
-                <div class="cat-excerpt">Lorem ipsum dolor sit amet, consectetuer adipiscing elit aenean commodo ligula eget dolor aenean massa cum sociis natoque.</div>
+                <div class="cat-excerpt">Discover promising calls for interest and potential EU funding opportunities. Work with our team and extensive network to transform challenges into tangible solutions and explore new business prospects.</div>
                 <div class="icons">
                     <div class="cat-details" data-modal="3"><span id="ico-info" class="material-symbols-outlined">read_more</span> Read more</div>
                     <!-- <div><a class="cat-browse" href="https://www.fiware.org/showcase/support-services/" rel="noopener"><span id="ico-info" class="material-symbols-outlined">grid_view</span> Browse all</a></div> -->
