join-us updates

--- a/join-us/benefits/index.html
+++ b/join-us/benefits/index.html
@@ -4,45 +4,45 @@
 
         <div class="item">
             <div class="card-featured">
-                <div class="thumb-featured"><img src="https://www.fiware.org/style/imgs/join-us/icons/icon-open-source.svg"></div>
+                <div class="thumb-featured"><img src="https://www.fiware.org/style/imgs/join-us/icons/icon-benefit-fiware-for-impact.svg"></div>
                 <div class="card-content">
-                <p class="card-featured-title">Thriving with Open Source communities</p>
-                <p class="card-featured-text">Our members are a powerful force for open innovation and implementation. You can have an active role and voice in the evolution of the FIWARE framework and adoption of FIWARE powered solutions.</p>
+                <p class="card-featured-title">Gain visibility</p>
+                <p class="card-featured-text">Join a vibrant worldwide open community; exchange, collaborate, engage, and network.</p>
                 </div>
             </div>
         </div>
 
         <div class="item">
             <div class="card-featured">
-                <div class="thumb-featured"><img src="https://www.fiware.org/style/imgs/join-us/icons/icon-exposure.svg"></div>
+                <div class="thumb-featured"><img src="https://www.fiware.org/style/imgs/join-us/icons/icon-benefit-fiware-for-developers.svg"></div>
                 <div class="card-content">
-                <p class="card-featured-title">Exposure for your organization</p>
-                <p class="card-featured-text">Hook up with the powerful FIWARE Marketing team providing you with additional visibility, opportunities to grow your business and community, and awareness with the local and global ecosystem.</p>
+                <p class="card-featured-title">Learn by doing</p>
+                <p class="card-featured-text">Get technical insight, assets, and services that you can use and further develop for free.</p>
                 </div>
             </div>
         </div>
 
         <div class="item">
             <div class="card-featured">
-                <div class="thumb-featured"><img src="https://www.fiware.org/style/imgs/join-us/icons/icon-collaborate.svg"></div>
+                <div class="thumb-featured"><img src="https://www.fiware.org/style/imgs/join-us/icons/icon-benefit-fiware-for-academia.svg"></div>
                 <div class="card-content">
-                <p class="card-featured-title">Collaborate with our Partner Ecosystem</p>
-                <p class="card-featured-text">FIWARE has relationships with hundreds of software, cloud (inc. Gaia-X), data services and hardware partners to collaborate, co-create, deploy and roll out FIWARE technology in your environment.</p>
+                <p class="card-featured-title">Be the first to know</p>
+                <p class="card-featured-text">Ensure quality and scientific accuracy, build a relevant, up-to-date body of knowledge.</p>
                 </div>
             </div>
         </div>
 
         <div class="item">
             <div class="card-featured">
-                <div class="thumb-featured"><img src="https://www.fiware.org/style/imgs/join-us/icons/icon-schowcase.svg"></div>
+                <div class="thumb-featured"><img src="https://www.fiware.org/style/imgs/join-us/icons/icon-benefit-fiware-for-growth.svg"></div>
                 <div class="card-content">
-                <p class="card-featured-title">Get noticed on FIWARE Showcase</p>
-                <p class="card-featured-text">Maximize your business potential by certifying your solutions and services on FIWARE Showcase, the global one-stop shop that gives visibility to a wide range of FIWARE driven offerings.</p>
+                <p class="card-featured-title">Grow your business</p>
+                <p class="card-featured-text">Accelerate your developed products and get support to build market-oriented solutions.</p>
                 </div>
             </div>
         </div>
 
-        <div class="item">
+        <!-- <div class="item">
             <div class="card-featured">
                 <div class="thumb-featured"><img src="https://www.fiware.org/style/imgs/join-us/icons/icon-sponsorship.svg"></div>
                 <div class="card-content">
@@ -60,7 +60,7 @@
                 <p class="card-featured-text">Get direct access to FF executives & staff to help with engagements, potential seats in guiding committees, FF Scientific Advisory Board, or the Board of Directors, with specific voting rights.</p>
                 </div>
             </div>
-        </div>
+        </div> -->
 
     </div>
 </div>
