join-us content updates

--- a/join-us/benefits/index.html
+++ b/join-us/benefits/index.html
@@ -7,7 +7,7 @@
                 <div class="thumb-featured"><img src="https://www.fiware.org/style/imgs/join-us/icons/icon-benefit-fiware-for-impact.svg"></div>
                 <div class="card-content">
                 <p class="card-featured-title">Gain visibility</p>
-                <p class="card-featured-text">Join a vibrant worldwide open community; exchange, collaborate, engage, and network.</p>
+                <p class="card-featured-text">Join a vibrant worldwide open community; collaborate, engage, and network.</p>
                 </div>
             </div>
         </div>
@@ -37,7 +37,7 @@
                 <div class="thumb-featured"><img src="https://www.fiware.org/style/imgs/join-us/icons/icon-benefit-fiware-for-growth.svg"></div>
                 <div class="card-content">
                 <p class="card-featured-title">Grow your business</p>
-                <p class="card-featured-text">Accelerate your developed products and get support to build market-oriented solutions.</p>
+                <p class="card-featured-text">Boost your existing products and get support to build market-oriented solutions.</p>
                 </div>
             </div>
         </div>
