--- a/join-us/programs/index.html
+++ b/join-us/programs/index.html
@@ -11,7 +11,7 @@
           <div class="cat-ico"><img src="https://www.fiware.org/style/imgs/join-us/icons/icon-fiware-for-impact.svg" /></div>
             <div class="cat-content">
               <img class="cat-logo" src="https://www.fiware.org/style/imgs/join-us/badges/badge-fiware-for-impact.svg" />
-                <div class="cat-excerpt">Leverage our vast network. Gain access to discounted sponsorships and promotional resources, and participate in international events to highlight your accomplishments.</div>
+                <div class="cat-excerpt">Leverage our vast network. Gain access to discounted sponsorships and promotional resources, and join international events to showcase your achievements.</div>
                 <div class="icons">
                     <div class="cat-details" data-modal="0"><span id="ico-info" class="material-symbols-outlined">read_more</span> Read more</div>
                     <!-- <div><a class="cat-browse" href="https://www.fiware.org/showcase-/powered-by-fiware/" rel="noopener"><span id="ico-info" class="material-symbols-outlined">grid_view</span> Browse all</a></div> -->
@@ -63,7 +63,7 @@
           <div class="cat-ico"><img src="https://www.fiware.org/style/imgs/join-us/icons/icon-fiware-for-growth.svg"/></div>
             <div class="cat-content">
               <img class="cat-logo" src="https://www.fiware.org/style/imgs/join-us/badges/badge-fiware-for-growth.svg" />
-                <div class="cat-excerpt">Discover promising calls for interest and potential EU funding opportunities. Work with us to transform challenges into tangible solutions and explore new business prospects.</div>
+                <div class="cat-excerpt">Discover promising calls for interest and potential EU funding opportunities. Transform challenges into tangible solutions and explore new business prospects.</div>
                 <div class="icons">
                     <div class="cat-details" data-modal="3"><span id="ico-info" class="material-symbols-outlined">read_more</span> Read more</div>
                     <!-- <div><a class="cat-browse" href="https://www.fiware.org/showcase/support-services/" rel="noopener"><span id="ico-info" class="material-symbols-outlined">grid_view</span> Browse all</a></div> -->
