DACH event updates

--- a/directories/people/speakers/filters.html
+++ b/directories/people/speakers/filters.html
@@ -49,6 +49,7 @@
             <label for='filterCompany' class='dropdown-label'>Organisation</label>
             <select name='' id='filterCompany' class='dropdown-last'>
                 <option value='*'>All Organisations</option>
+                        <option value='-ui--'>[ui!]</option>
                         <option value='addix'>ADDIX</option>
                         <option value='agricolus'>Agricolus</option>
                         <option value='almaviva'>Almaviva</option>
@@ -57,14 +58,18 @@
                         <option value='bdva'>BDVA</option>
                         <option value='beko-europe'>Beko Europe</option>
                         <option value='bmwk'>BMWK</option>
+                        <option value='bochum-university-of-applied-sciences'>Bochum University of Applied Sciences</option>
                         <option value='cartif'>CARTIF</option>
                         <option value='cdp-venture-capitalist'>CDP Venture Capitalist</option>
                         <option value='cetaqua'>Cetaqua</option>
                         <option value='ciga'>CIGA</option>
+                        <option value='city-of-herne'>City of Herne</option>
                         <option value='city-of-santa-monica'>City of Santa Monica</option>
                         <option value='city-of-vienna'>City of Vienna</option>
                         <option value='cnr---imati'>CNR / IMATI</option>
                         <option value='data-power'>Data Power</option>
+                        <option value='digitaltwin-technology'>DigitalTwin Technology</option>
+                        <option value='edag'>EDAG</option>
                         <option value='edib'>EDIB</option>
                         <option value='egm'>EGM</option>
                         <option value='engineering'>Engineering</option>
@@ -124,6 +129,7 @@
                         <option value='rwanda-ict-chamber'>Rwanda ICT Chamber</option>
                         <option value='rwth-aachen'>RWTH Aachen</option>
                         <option value='secmotic'>Secmotic</option>
+                        <option value='senlab'>SenLab</option>
                         <option value='senlab-d-o-o-'>SenLab d.o.o.</option>
                         <option value='seoul-municipality'>Seoul Municipality</option>
                         <option value='stealth-iss-group'>Stealth-ISS Group</option>
