--- a/directories/events-directory/events.html
+++ b/directories/events-directory/events.html
@@ -35,6 +35,9 @@
             <h3 class="city-name">Marrakesh</h3>
             </div>
             <span class="place">Place Bab Jdid</span>
+            <div class="date-time">
+              <span class="time">29 May – 31 May</span>
+            </div>
           </div>
         </a>
         </div>
@@ -408,7 +411,7 @@
             </div>
             <span class="place">County Hall</span>
             <div class="date-time">
-              <span class="time">9:00 am – 6:00 pm</span>
+              <span class="time">26 Jun – 27 Jun</span>
             </div>
           </div>
         </a>
@@ -656,6 +659,9 @@
             <h3 class="city-name">Naples</h3>
             </div>
             <span class="place">Mostra d&#x27;Oltremare</span>
+            <div class="date-time">
+              <span class="time">18 Sep – 19 Sep</span>
+            </div>
           </div>
         </a>
         </div>
@@ -700,6 +706,9 @@
             <h3 class="city-name">Naples</h3>
             </div>
             <span class="place">Mostra d&#x27;Oltremare</span>
+            <div class="date-time">
+              <span class="time">18 Sep – 19 Sep</span>
+            </div>
           </div>
         </a>
         </div>
@@ -862,6 +871,9 @@
             <h3 class="city-name">Barcelona</h3>
             </div>
             <span class="place">Fira Barcelona Gran Via</span>
+            <div class="date-time">
+              <span class="time">5 Nov – 7 Nov</span>
+            </div>
           </div>
         </a>
           <div class="speakers">
@@ -1274,7 +1286,7 @@
             </div>
             <span class="place">Oslo Science Park</span>
             <div class="date-time">
-              <span class="time">9:00 am – 4:00 pm</span>
+              <span class="time">28 Nov – 30 Nov</span>
             </div>
           </div>
         </a>
@@ -1343,7 +1355,7 @@
             </div>
             <span class="place">BluePoint Brussels</span>
             <div class="date-time">
-              <span class="time">8:00 am – 5:00 pm</span>
+              <span class="time">10 Dec – 12 Dec</span>
             </div>
           </div>
         </a>
@@ -1643,7 +1655,7 @@
             </div>
             <span class="place">ETSI Sophia Antipolis</span>
             <div class="date-time">
-              <span class="time">9:00 am – 5:30 pm</span>
+              <span class="time">24 Feb – 28 Feb</span>
             </div>
           </div>
         </a>
@@ -1724,6 +1736,9 @@
             <h3 class="city-name">Warsaw</h3>
             </div>
             <span class="place">Hilton Warsaw City</span>
+            <div class="date-time">
+              <span class="time">11 Mar – 12 Mar</span>
+            </div>
           </div>
         </a>
         </div>
