Remove product details from non-members

--- a/showcase/product-details/featured.html
+++ b/showcase/product-details/featured.html
@@ -7,7 +7,7 @@
                 </picture>
             </div>
             <h3 class='card-title'>cosma21</h3>
-            <a class='details' href='./product-details/?category&#x3D;powered&amp;id&#x3D;ekom21-cosma21' rel='noopener'>See details
+            <a class='details' href='https://www.hessen-kommunal.digital/en/urban-data-platform/' rel='noopener'>See details
                 <span id='ico-info' class='material-symbols-outlined'>navigate_next</span></a>
         </div>
     </div>
@@ -20,7 +20,7 @@
                 </picture>
             </div>
             <h3 class='card-title'>Palatine</h3>
-            <a class='details' href='./product-details/?category&#x3D;powered&amp;id&#x3D;satec-palatine' rel='noopener'>See details
+            <a class='details' href='https://www.satechub.com/palatine' rel='noopener'>See details
                 <span id='ico-info' class='material-symbols-outlined'>navigate_next</span></a>
         </div>
     </div>
@@ -59,7 +59,7 @@
                 </picture>
             </div>
             <h3 class='card-title'>ESI FIWARE API</h3>
-            <a class='details' href='./product-details/?category&#x3D;ready&amp;id&#x3D;ecosysteminformaticsinc-esifiwareapi' rel='noopener'>See details
+            <a class='details' href='https://ecosinfo.ca' rel='noopener'>See details
                 <span id='ico-info' class='material-symbols-outlined'>navigate_next</span></a>
         </div>
     </div>
@@ -72,7 +72,7 @@
                 </picture>
             </div>
             <h3 class='card-title'>DinyPARK</h3>
-            <a class='details' href='./product-details/?category&#x3D;ready&amp;id&#x3D;dinyconsistemas-dinypark' rel='noopener'>See details
+            <a class='details' href='https://www.dinycon.com/en/solutions/information-on-free-spaces-in-car-parks' rel='noopener'>See details
                 <span id='ico-info' class='material-symbols-outlined'>navigate_next</span></a>
         </div>
     </div>
@@ -85,7 +85,7 @@
                 </picture>
             </div>
             <h3 class='card-title'>Bleecker System</h3>
-            <a class='details' href='./product-details/?category&#x3D;ready&amp;id&#x3D;bleeckertechnologies-bleeckersystem' rel='noopener'>See details
+            <a class='details' href='https://bleecker.tech' rel='noopener'>See details
                 <span id='ico-info' class='material-symbols-outlined'>navigate_next</span></a>
         </div>
     </div>
@@ -98,7 +98,7 @@
                 </picture>
             </div>
             <h3 class='card-title'>ACCRED</h3>
-            <a class='details' href='./product-details/?category&#x3D;ready&amp;id&#x3D;gabitelsolucionestecnicasslu-accred' rel='noopener'>See details
+            <a class='details' href='https://www.accred.es' rel='noopener'>See details
                 <span id='ico-info' class='material-symbols-outlined'>navigate_next</span></a>
         </div>
     </div>
