Re-add FICODES as member

--- a/marketplace/support-services/future-internet/consultancy---integration-services.html
+++ b/marketplace/support-services/future-internet/consultancy---integration-services.html
@@ -11,8 +11,8 @@
 <meta name="keywords" content="Cities,AgriFood,Logistics,Industry,Ports,Internet of Things,Data Handling">
 <meta name="description" content="Ally yourself with the architects and engineers of some of the main FIWARE technologies to develop services on open platforms for smart environments such as FIWARE.">
 
-<meta http-equiv="refresh" content="1; url=https://www.ficodes.com/en/#services" />
-<meta property="og:url" content="https://www.fiware.org/support-services/future-internet/consultancy---integration-services.html">
+<meta http-equiv="refresh" content="1; url=https://www.fiware.org/showcase/product-details/?category=services&id=futureinternet-consultancyintegrationservices" />
+<meta property="og:url" content="https://www.fiware.org/marketplace/product-details/?category=services&id=futureinternet-consultancyintegrationservices">
 
 <!-- Open Graph Tags -->
 <meta property="og:locale" content="en_US">
