--- a/showcase/support-services/sitemap.html
+++ b/showcase/support-services/sitemap.html
@@ -75,6 +75,7 @@ li {
 		<li><a href="https://www.fiware.org/support-services/fiware-space/consultancy---integration-services.html">FIWARE Space - Consultancy &amp; Integration Services</a></li>
 		<li><a href="https://www.fiware.org/support-services/fiware-zone/coaching---training-services.html">FIWARE Zone - Coaching &amp; Training Services</a></li>
 		<li><a href="https://www.fiware.org/support-services/fiware-zone/consultancy---integration-services.html">FIWARE Zone - Consultancy &amp; Integration Services</a></li>
+		<li><a href="https://www.fiware.org/support-services/future-internet/consultancy---integration-services.html">Future Internet - Consultancy &amp; Integration Services</a></li>
 		<li><a href="https://www.fiware.org/support-services/hopu/fiware-expert-certification.html">HOPU - FIWARE Expert certification</a></li>
 		<li><a href="https://www.fiware.org/support-services/martel-innovate/martel-lab.html">Martel Innovate - Martel Lab</a></li>
 		<li><a href="https://www.fiware.org/support-services/mnx-online/coaching---training-services.html">MNX Online - Coaching &amp; Training Services</a></li>
