Re-add EGM and Sensowave as members

--- a/marketplace/powered-by-fiware/egm/carpool-parking.html
+++ b/marketplace/powered-by-fiware/egm/carpool-parking.html
@@ -11,8 +11,8 @@
 <meta name="keywords" content="Automotive,Cities,Measurement,Mobility,Transport,Advanced or High Performance Computing,Cloud Computing,Mobility and Location">
 <meta name="description" content="This camera allows us to count entries and exits in a carpool park and to determine whether the cars parked are indeed intended for carpooling. This device allows our clients to have tangible statistics on the occupation of a car park.">
 
-<meta http-equiv="refresh" content="1; url=https://www.egm.io/en/the-smart-camera-for-carpooling" />
-<meta property="og:url" content="https://www.fiware.org/powered-by-fiware/egm/carpool-parking.html">
+<meta http-equiv="refresh" content="1; url=https://www.fiware.org/showcase/product-details/?category=powered&id=egm-carpoolparking" />
+<meta property="og:url" content="https://www.fiware.org/marketplace/product-details/?category=powered&id=egm-carpoolparking">
 
 <!-- Open Graph Tags -->
 <meta property="og:locale" content="en_US">
