--- a/marketplace/powered-by-fiware/egm/connected-canteens.html
+++ b/marketplace/powered-by-fiware/egm/connected-canteens.html
@@ -11,8 +11,8 @@
 <meta name="keywords" content="AgriFood,Measurement,Waste Management,Data Analytics,Screens and Display,Sensory Systems">
 <meta name="description" content="This solution includes connected weighing scales under the bins to provide information on the weight of organic and non-organic waste from an individual and overall perspective. This solution allows canteens to raise awareness and help to adapt menus and quantities.">
 
-<meta http-equiv="refresh" content="1; url=https://www.picardiegazette.fr/article/saint-quentin-un-projet-innovant-de-poubelles-connectees" />
-<meta property="og:url" content="https://www.fiware.org/powered-by-fiware/egm/connected-canteens.html">
+<meta http-equiv="refresh" content="1; url=https://www.fiware.org/showcase/product-details/?category=powered&id=egm-connectedcanteens" />
+<meta property="og:url" content="https://www.fiware.org/marketplace/product-details/?category=powered&id=egm-connectedcanteens">
 
 <!-- Open Graph Tags -->
 <meta property="og:locale" content="en_US">
