--- a/showcase/fiware-ready/sitemap.html
+++ b/showcase/fiware-ready/sitemap.html
@@ -72,6 +72,7 @@ li {
 		<li><a href="https://www.fiware.org/fiware-ready/libelium/plug-sense-.html">Libelium - Plug&amp;Sense!</a></li>
 		<li><a href="https://www.fiware.org/fiware-ready/secmotic/lockart.html">Secmotic - LockArt</a></li>
 		<li><a href="https://www.fiware.org/fiware-ready/secmotic/muvone.html">Secmotic - Muvone</a></li>
+		<li><a href="https://www.fiware.org/fiware-ready/sensowave/digitanimal.html">Sensowave - Digitanimal</a></li>
 		<li><a href="https://www.fiware.org/fiware-ready/sensowave/digitanimal-livestock-gps.html">Sensowave - Digitanimal Livestock GPS</a></li>
 		<li><a href="https://www.fiware.org/fiware-ready/edag-engineering-gmbh/trive-park.html">EDAG Engineering GmbH - trive.park</a></li>
 		<li><a href="https://www.fiware.org/fiware-ready/edag-production-solutions-gmbh---co--kg/open-source-smart-city-dashboard.html">EDAG Production Solutions GmbH &amp; Co. KG - Open Source Smart City Dashboard</a></li>
