--- a/showcase/powered-by-fiware/sitemap.html
+++ b/showcase/powered-by-fiware/sitemap.html
@@ -67,6 +67,8 @@ li {
 		<li><a href="https://www.fiware.org/powered-by-fiware/atos/atos-cognitive-data-platform.html">Atos - Atos Cognitive Data Platform</a></li>
 		<li><a href="https://www.fiware.org/powered-by-fiware/bettair-cities/bettair.html">Bettair Cities - Bettair</a></li>
 		<li><a href="https://www.fiware.org/powered-by-fiware/dksr/open-urban-data-platform.html">DKSR - Open Urban Data Platform</a></li>
+		<li><a href="https://www.fiware.org/powered-by-fiware/egm/carpool-parking.html">EGM - Carpool Parking</a></li>
+		<li><a href="https://www.fiware.org/powered-by-fiware/egm/connected-canteens.html">EGM - Connected Canteens</a></li>
 		<li><a href="https://www.fiware.org/powered-by-fiware/egm/smart-irrigation.html">EGM - Smart Irrigation</a></li>
 		<li><a href="https://www.fiware.org/powered-by-fiware/engineering/digital-enabler.html">Engineering - Digital Enabler</a></li>
 		<li><a href="https://www.fiware.org/powered-by-fiware/engineering/curavesta.html">Engineering - CuraVesta</a></li>
@@ -81,6 +83,7 @@ li {
 		<li><a href="https://www.fiware.org/powered-by-fiware/phoops/muv-app.html">phoops - MUV-App</a></li>
 		<li><a href="https://www.fiware.org/powered-by-fiware/profirator/lakes-profi-space.html">Profirator - lakes.profi.space</a></li>
 		<li><a href="https://www.fiware.org/powered-by-fiware/sensative/yggio-platform.html">Sensative - Yggio Platform</a></li>
+		<li><a href="https://www.fiware.org/powered-by-fiware/sensowave/digitanimal.html">Sensowave - Digitanimal</a></li>
 		<li><a href="https://www.fiware.org/powered-by-fiware/sirus-nv/sirus-city-store.html">Sirus NV - Sirus City Store</a></li>
 		<li><a href="https://www.fiware.org/powered-by-fiware/snap4city/km4city.html">Snap4City - Km4City</a></li>
 		<li><a href="https://www.fiware.org/powered-by-fiware/snap4city/snap4city.html">Snap4City - Snap4City</a></li>
