--- a/marketplace/powered-by-fiware/sensowave/digitanimal.html
+++ b/marketplace/powered-by-fiware/sensowave/digitanimal.html
@@ -11,8 +11,8 @@
 <meta name="keywords" content="AgriFood,Internet of Things,Data Analytics">
 <meta name="description" content="Digitanimal is an integrated service platform that increases livestock farms&#x27; profits; improving animal welfare and providing traceability tools for consumers.">
 
-<meta http-equiv="refresh" content="1; url=https://digitanimal.com/?lang&#x3D;en" />
-<meta property="og:url" content="https://www.fiware.org/powered-by-fiware/sensowave/digitanimal.html">
+<meta http-equiv="refresh" content="1; url=https://www.fiware.org/showcase/product-details/?category=powered&id=sensowave-digitanimal" />
+<meta property="og:url" content="https://www.fiware.org/marketplace/product-details/?category=powered&id=sensowave-digitanimal">
 
 <!-- Open Graph Tags -->
 <meta property="og:locale" content="en_US">
