Re-add Hostabee as member

--- a/showcase/powered-by-fiware/sitemap.html
+++ b/showcase/powered-by-fiware/sitemap.html
@@ -76,6 +76,7 @@ li {
 		<li><a href="https://www.fiware.org/powered-by-fiware/fiwoo/fiwoo.html">FIWOO - FIWOO</a></li>
 		<li><a href="https://www.fiware.org/powered-by-fiware/future-intelligence/quhoma.html">Future Intelligence - QUHOMA</a></li>
 		<li><a href="https://www.fiware.org/powered-by-fiware/hopu/low-emission-zones.html">HOPU - Low Emission Zones</a></li>
+		<li><a href="https://www.fiware.org/powered-by-fiware/hostabee/b-keep.html">Hostabee - B-keep</a></li>
 		<li><a href="https://www.fiware.org/powered-by-fiware/jig/smartappcity.html">JIG - SmartAppCity</a></li>
 		<li><a href="https://www.fiware.org/powered-by-fiware/martel-innovate/orchestra-cities.html">Martel Innovate - Orchestra Cities</a></li>
 		<li><a href="https://www.fiware.org/powered-by-fiware/nec/cloud-city-operations-center.html">NEC - Cloud City Operations Center</a></li>
