--- a/marketplace/powered-by-fiware/hostabee/b-keep.html
+++ b/marketplace/powered-by-fiware/hostabee/b-keep.html
@@ -11,8 +11,8 @@
 <meta name="keywords" content="Agriculture,AgriFood,Education,Measurement,Artificial Intelligence,Big Data,Internet of Things">
 <meta name="description" content="Hostabee has developed a connected module, named « B-Keep », associated with a web app, that allows beekeepers to remotely track the life cycle of their bee colonies.">
 
-<meta http-equiv="refresh" content="1; url=https://hostabee.com/en/eng-homepage/" />
-<meta property="og:url" content="https://www.fiware.org/powered-by-fiware/hostabee/b-keep.html">
+<meta http-equiv="refresh" content="1; url=https://www.fiware.org/showcase/product-details/?category=powered&id=hostabee-bkeep" />
+<meta property="og:url" content="https://www.fiware.org/marketplace/product-details/?category=powered&id=hostabee-bkeep">
 
 <!-- Open Graph Tags -->
 <meta property="og:locale" content="en_US">
