speakers content updates

--- a/directories/people/speakers/filters.html
+++ b/directories/people/speakers/filters.html
@@ -69,6 +69,7 @@
                         <option value='cnr---imati'>CNR / IMATI</option>
                         <option value='data-power'>Data Power</option>
                         <option value='digitaltwin-technology'>DigitalTwin Technology</option>
+                        <option value='ecosystem-informatics'>Ecosystem Informatics</option>
                         <option value='edag'>EDAG</option>
                         <option value='edib'>EDIB</option>
                         <option value='egm'>EGM</option>
