--- a/directories/events-directory/filters.html
+++ b/directories/events-directory/filters.html
@@ -72,6 +72,7 @@
                 <option value='ai'>AI</option>
                 <option value='data-sharing'>Data Sharing</option>
                 <option value='data-spaces'>Data Spaces</option>
+                <option value='digital-product-passport'>Digital Product Passport</option>
                 <option value='global-summit'>Global Summit</option>
                 <option value='smart-cities'>Smart Cities</option>
                 <option value='smart-water'>Smart Water</option>
