--- a/directories/sponsors/sponsors.html
+++ b/directories/sponsors/sponsors.html
@@ -1,9 +1,15 @@
-<div
+<div id="item-0"
     class='grid-item org-bio hosting-partner municipality-of-naples'
+    href="#item-0"
     data-modal='0'
 >
     <div class='f-cat active'>
-        <img alt='' class='city-photo' src='https://www.fiware.org/fiware-summit/naples-2024/images/partners/logo-municipality-of-naples.png' loading='lazy' />
+        <div class='city-photo-container'>
+            <picture>
+               <source srcset="https://www.fiware.org/fiware-summit/naples-2024/images/partners/logo-municipality-of-naples.webp" type="image/webp"/>
+               <img alt="" class="city-photo" src="https://www.fiware.org/fiware-summit/naples-2024/images/partners/logo-municipality-of-naples.png" loading="lazy" />
+            </picture>
+        </div>
         <div class='profile-details'>
             <h6 class='name'>Municipality of Naples</h6>
         </div>
@@ -17,12 +23,18 @@
         </div>
     </div>
 </div>
-<div
+<div id="item-1"
     class='grid-item org-bio official-partner meditech'
+    href="#item-1"
     data-modal='1'
 >
     <div class='f-cat active'>
-        <img alt='' class='city-photo' src='https://www.fiware.org/fiware-summit/naples-2024/images/partners/logo-meditech.png' loading='lazy' />
+        <div class='city-photo-container'>
+            <picture>
+               <source srcset="https://www.fiware.org/fiware-summit/naples-2024/images/partners/logo-meditech.webp" type="image/webp"/>
+               <img alt="" class="city-photo" src="https://www.fiware.org/fiware-summit/naples-2024/images/partners/logo-meditech.png" loading="lazy" />
+            </picture>
+        </div>
         <div class='profile-details'>
             <h6 class='name'>Meditech</h6>
         </div>
@@ -36,12 +48,18 @@
         </div>
     </div>
 </div>
-<div
+<div id="item-2"
     class='grid-item org-bio official-partner infiniti-mondi'
+    href="#item-2"
     data-modal='2'
 >
     <div class='f-cat active'>
-        <img alt='' class='city-photo' src='https://www.fiware.org/fiware-summit/naples-2024/images/partners/logo-infiniti-mondi.png' loading='lazy' />
+        <div class='city-photo-container'>
+            <picture>
+               <source srcset="https://www.fiware.org/fiware-summit/naples-2024/images/partners/logo-infiniti-mondi.webp" type="image/webp"/>
+               <img alt="" class="city-photo" src="https://www.fiware.org/fiware-summit/naples-2024/images/partners/logo-infiniti-mondi.png" loading="lazy" />
+            </picture>
+        </div>
         <div class='profile-details'>
             <h6 class='name'>Infiniti Mondi</h6>
         </div>
@@ -55,12 +73,18 @@
         </div>
     </div>
 </div>
-<div
+<div id="item-3"
     class='grid-item org-bio exhibitor premier-sponsor latitudo-40'
+    href="#item-3"
     data-modal='3'
 >
     <div class='f-cat active'>
-        <img alt='' class='city-photo' src='https://www.fiware.org/fiware-summit/naples-2024/images/sponsors/logo-latitudo40.png' loading='lazy' />
+        <div class='city-photo-container'>
+            <picture>
+               <source srcset="https://www.fiware.org/fiware-summit/naples-2024/images/sponsors/logo-latitudo40.webp" type="image/webp"/>
+               <img alt="" class="city-photo" src="https://www.fiware.org/fiware-summit/naples-2024/images/sponsors/logo-latitudo40.png" loading="lazy" />
+            </picture>
+        </div>
         <div class='profile-details'>
             <h6 class='name'>Latitudo 40</h6>
         </div>
@@ -74,12 +98,18 @@
         </div>
     </div>
 </div>
-<div
+<div id="item-4"
     class='grid-item org-bio exhibitor premier-sponsor opendatasoft'
+    href="#item-4"
     data-modal='4'
 >
     <div class='f-cat active'>
-        <img alt='' class='city-photo' src='https://www.fiware.org/fiware-summit/naples-2024/images/sponsors/logo-opendatasoft.png' loading='lazy' />
+        <div class='city-photo-container'>
+            <picture>
+               <source srcset="https://www.fiware.org/fiware-summit/naples-2024/images/sponsors/logo-opendatasoft.webp" type="image/webp"/>
+               <img alt="" class="city-photo" src="https://www.fiware.org/fiware-summit/naples-2024/images/sponsors/logo-opendatasoft.png" loading="lazy" />
+            </picture>
+        </div>
         <div class='profile-details'>
             <h6 class='name'>Opendatasoft</h6>
         </div>
@@ -93,12 +123,18 @@
         </div>
     </div>
 </div>
-<div
+<div id="item-5"
     class='grid-item org-bio exhibitor premier-sponsor the-lisbon-council'
+    href="#item-5"
     data-modal='5'
 >
     <div class='f-cat active'>
-        <img alt='' class='city-photo' src='https://www.fiware.org/fiware-summit/naples-2024/images/sponsors/logo-the-lisbon-council.png' loading='lazy' />
+        <div class='city-photo-container'>
+            <picture>
+               <source srcset="https://www.fiware.org/fiware-summit/naples-2024/images/sponsors/logo-the-lisbon-council.webp" type="image/webp"/>
+               <img alt="" class="city-photo" src="https://www.fiware.org/fiware-summit/naples-2024/images/sponsors/logo-the-lisbon-council.png" loading="lazy" />
+            </picture>
+        </div>
         <div class='profile-details'>
             <h6 class='name'>The Lisbon Council</h6>
         </div>
@@ -112,12 +148,18 @@
         </div>
     </div>
 </div>
-<div
+<div id="item-6"
     class='grid-item org-bio exhibitor sponsor beopen'
+    href="#item-6"
     data-modal='6'
 >
     <div class='f-cat active'>
-        <img alt='' class='city-photo' src='https://www.fiware.org/fiware-summit/naples-2024/images/sponsors/logo-beopen.png' loading='lazy' />
+        <div class='city-photo-container'>
+            <picture>
+               <source srcset="https://www.fiware.org/fiware-summit/naples-2024/images/sponsors/logo-beopen.webp" type="image/webp"/>
+               <img alt="" class="city-photo" src="https://www.fiware.org/fiware-summit/naples-2024/images/sponsors/logo-beopen.png" loading="lazy" />
+            </picture>
+        </div>
         <div class='profile-details'>
             <h6 class='name'>BeOpen</h6>
         </div>
@@ -131,12 +173,18 @@
         </div>
     </div>
 </div>
-<div
+<div id="item-7"
     class='grid-item org-bio sponsor dome-project'
+    href="#item-7"
     data-modal='7'
 >
     <div class='f-cat active'>
-        <img alt='' class='city-photo' src='https://www.fiware.org/fiware-summit/naples-2024/images/sponsors/logo-dome.png' loading='lazy' />
+        <div class='city-photo-container'>
+            <picture>
+               <source srcset="https://www.fiware.org/fiware-summit/naples-2024/images/sponsors/logo-dome.webp" type="image/webp"/>
+               <img alt="" class="city-photo" src="https://www.fiware.org/fiware-summit/naples-2024/images/sponsors/logo-dome.png" loading="lazy" />
+            </picture>
+        </div>
         <div class='profile-details'>
             <h6 class='name'>DOME Project</h6>
         </div>
@@ -150,12 +198,18 @@
         </div>
     </div>
 </div>
-<div
+<div id="item-8"
     class='grid-item org-bio strategic-alliance dsba'
+    href="#item-8"
     data-modal='8'
 >
     <div class='f-cat active'>
-        <img alt='' class='city-photo' src='https://www.fiware.org/fiware-summit/naples-2024/images/sponsors/logo-DSBA.png' loading='lazy' />
+        <div class='city-photo-container'>
+            <picture>
+               <source srcset="https://www.fiware.org/fiware-summit/naples-2024/images/sponsors/logo-DSBA.webp" type="image/webp"/>
+               <img alt="" class="city-photo" src="https://www.fiware.org/fiware-summit/naples-2024/images/sponsors/logo-DSBA.png" loading="lazy" />
+            </picture>
+        </div>
         <div class='profile-details'>
             <h6 class='name'>DSBA</h6>
         </div>
@@ -166,12 +220,18 @@
         </div>
     </div>
 </div>
-<div
+<div id="item-9"
     class='grid-item org-bio exhibitor sponsor enershare'
+    href="#item-9"
     data-modal='9'
 >
     <div class='f-cat active'>
-        <img alt='' class='city-photo' src='https://www.fiware.org/fiware-summit/naples-2024/images/sponsors/logo-enershare.png' loading='lazy' />
+        <div class='city-photo-container'>
+            <picture>
+               <source srcset="https://www.fiware.org/fiware-summit/naples-2024/images/sponsors/logo-enershare.webp" type="image/webp"/>
+               <img alt="" class="city-photo" src="https://www.fiware.org/fiware-summit/naples-2024/images/sponsors/logo-enershare.png" loading="lazy" />
+            </picture>
+        </div>
         <div class='profile-details'>
             <h6 class='name'>Enershare</h6>
         </div>
@@ -185,12 +245,18 @@
         </div>
     </div>
 </div>
-<div
+<div id="item-10"
     class='grid-item org-bio sponsor european-space-agency'
+    href="#item-10"
     data-modal='10'
 >
     <div class='f-cat active'>
-        <img alt='' class='city-photo' src='https://www.fiware.org/fiware-summit/naples-2024/images/sponsors/logo-esa-space-solutions.png' loading='lazy' />
+        <div class='city-photo-container'>
+            <picture>
+               <source srcset="https://www.fiware.org/fiware-summit/naples-2024/images/sponsors/logo-esa-space-solutions.webp" type="image/webp"/>
+               <img alt="" class="city-photo" src="https://www.fiware.org/fiware-summit/naples-2024/images/sponsors/logo-esa-space-solutions.png" loading="lazy" />
+            </picture>
+        </div>
         <div class='profile-details'>
             <h6 class='name'>European Space Agency</h6>
         </div>
@@ -204,12 +270,18 @@
         </div>
     </div>
 </div>
-<div
+<div id="item-11"
     class='grid-item org-bio sponsor ulsit'
+    href="#item-11"
     data-modal='11'
 >
     <div class='f-cat active'>
-        <img alt='' class='city-photo' src='https://www.fiware.org/fiware-summit/naples-2024/images/sponsors/logo-unibit.png' loading='lazy' />
+        <div class='city-photo-container'>
+            <picture>
+               <source srcset="https://www.fiware.org/fiware-summit/naples-2024/images/sponsors/logo-unibit.webp" type="image/webp"/>
+               <img alt="" class="city-photo" src="https://www.fiware.org/fiware-summit/naples-2024/images/sponsors/logo-unibit.png" loading="lazy" />
+            </picture>
+        </div>
         <div class='profile-details'>
             <h6 class='name'>ULSIT</h6>
         </div>
@@ -223,12 +295,18 @@
         </div>
     </div>
 </div>
-<div
+<div id="item-12"
     class='grid-item org-bio under-the-patronage rai-campania'
+    href="#item-12"
     data-modal='12'
 >
     <div class='f-cat active'>
-        <img alt='' class='city-photo' src='https://www.fiware.org/fiware-summit/naples-2024/images/partners/logo-rai-campania.png' loading='lazy' />
+        <div class='city-photo-container'>
+            <picture>
+               <source srcset="https://www.fiware.org/fiware-summit/naples-2024/images/partners/logo-rai-campania.webp" type="image/webp"/>
+               <img alt="" class="city-photo" src="https://www.fiware.org/fiware-summit/naples-2024/images/partners/logo-rai-campania.png" loading="lazy" />
+            </picture>
+        </div>
         <div class='profile-details'>
             <h6 class='name'>Rai Campania</h6>
         </div>
@@ -242,12 +320,18 @@
         </div>
     </div>
 </div>
-<div
+<div id="item-13"
     class='grid-item org-bio media-partner cities-today'
+    href="#item-13"
     data-modal='13'
 >
     <div class='f-cat active'>
-        <img alt='' class='city-photo' src='https://www.fiware.org/fiware-summit/naples-2024/images/partners/logo-cities-today.png' loading='lazy' />
+        <div class='city-photo-container'>
+            <picture>
+               <source srcset="https://www.fiware.org/fiware-summit/naples-2024/images/partners/logo-cities-today.webp" type="image/webp"/>
+               <img alt="" class="city-photo" src="https://www.fiware.org/fiware-summit/naples-2024/images/partners/logo-cities-today.png" loading="lazy" />
+            </picture>
+        </div>
         <div class='profile-details'>
             <h6 class='name'>Cities Today</h6>
         </div>
@@ -261,12 +345,18 @@
         </div>
     </div>
 </div>
-<div
+<div id="item-14"
     class='grid-item org-bio media-partner club-globals'
+    href="#item-14"
     data-modal='14'
 >
     <div class='f-cat active'>
-        <img alt='' class='city-photo' src='https://www.fiware.org/fiware-summit/naples-2024/images/partners/logo-clubglobals.png' loading='lazy' />
+        <div class='city-photo-container'>
+            <picture>
+               <source srcset="https://www.fiware.org/fiware-summit/naples-2024/images/partners/logo-clubglobals.webp" type="image/webp"/>
+               <img alt="" class="city-photo" src="https://www.fiware.org/fiware-summit/naples-2024/images/partners/logo-clubglobals.png" loading="lazy" />
+            </picture>
+        </div>
         <div class='profile-details'>
             <h6 class='name'>Club Globals</h6>
         </div>
@@ -280,12 +370,18 @@
         </div>
     </div>
 </div>
-<div
+<div id="item-15"
     class='grid-item org-bio media-partner iot-global-network'
+    href="#item-15"
     data-modal='15'
 >
     <div class='f-cat active'>
-        <img alt='' class='city-photo' src='https://www.fiware.org/fiware-summit/naples-2024/images/partners/logo-IoTGN.png' loading='lazy' />
+        <div class='city-photo-container'>
+            <picture>
+               <source srcset="https://www.fiware.org/fiware-summit/naples-2024/images/partners/logo-IoTGN.webp" type="image/webp"/>
+               <img alt="" class="city-photo" src="https://www.fiware.org/fiware-summit/naples-2024/images/partners/logo-IoTGN.png" loading="lazy" />
+            </picture>
+        </div>
         <div class='profile-details'>
             <h6 class='name'>Iot Global Network</h6>
         </div>
@@ -299,12 +395,18 @@
         </div>
     </div>
 </div>
-<div
+<div id="item-16"
     class='grid-item org-bio media-partner iot-now'
+    href="#item-16"
     data-modal='16'
 >
     <div class='f-cat active'>
-        <img alt='' class='city-photo' src='https://www.fiware.org/fiware-summit/naples-2024/images/partners/logo-IoTNow.png' loading='lazy' />
+        <div class='city-photo-container'>
+            <picture>
+               <source srcset="https://www.fiware.org/fiware-summit/naples-2024/images/partners/logo-IoTNow.webp" type="image/webp"/>
+               <img alt="" class="city-photo" src="https://www.fiware.org/fiware-summit/naples-2024/images/partners/logo-IoTNow.png" loading="lazy" />
+            </picture>
+        </div>
         <div class='profile-details'>
             <h6 class='name'>Iot Now</h6>
         </div>
@@ -318,12 +420,18 @@
         </div>
     </div>
 </div>
-<div
+<div id="item-17"
     class='grid-item org-bio media-partner renewable-matter'
+    href="#item-17"
     data-modal='17'
 >
     <div class='f-cat active'>
-        <img alt='' class='city-photo' src='https://www.fiware.org/fiware-summit/naples-2024/images/partners/logo-renewable-matter.png' loading='lazy' />
+        <div class='city-photo-container'>
+            <picture>
+               <source srcset="https://www.fiware.org/fiware-summit/naples-2024/images/partners/logo-renewable-matter.webp" type="image/webp"/>
+               <img alt="" class="city-photo" src="https://www.fiware.org/fiware-summit/naples-2024/images/partners/logo-renewable-matter.png" loading="lazy" />
+            </picture>
+        </div>
         <div class='profile-details'>
             <h6 class='name'>Renewable Matter</h6>
         </div>
@@ -334,12 +442,18 @@
         </div>
     </div>
 </div>
-<div
+<div id="item-18"
     class='grid-item org-bio media-partner smartcitiesworld'
+    href="#item-18"
     data-modal='18'
 >
     <div class='f-cat active'>
-        <img alt='' class='city-photo' src='https://www.fiware.org/fiware-summit/naples-2024/images/partners/logo-smart-cities-world.png' loading='lazy' />
+        <div class='city-photo-container'>
+            <picture>
+               <source srcset="https://www.fiware.org/fiware-summit/naples-2024/images/partners/logo-smart-cities-world.webp" type="image/webp"/>
+               <img alt="" class="city-photo" src="https://www.fiware.org/fiware-summit/naples-2024/images/partners/logo-smart-cities-world.png" loading="lazy" />
+            </picture>
+        </div>
         <div class='profile-details'>
             <h6 class='name'>SmartCitiesWorld</h6>
         </div>
@@ -353,12 +467,18 @@
         </div>
     </div>
 </div>
-<div
+<div id="item-19"
     class='grid-item org-bio media-partner the-smart-city-journal'
+    href="#item-19"
     data-modal='19'
 >
     <div class='f-cat active'>
-        <img alt='' class='city-photo' src='https://www.fiware.org/fiware-summit/naples-2024/images/partners/logo-smart-city-journal.png' loading='lazy' />
+        <div class='city-photo-container'>
+            <picture>
+               <source srcset="https://www.fiware.org/fiware-summit/naples-2024/images/partners/logo-smart-city-journal.webp" type="image/webp"/>
+               <img alt="" class="city-photo" src="https://www.fiware.org/fiware-summit/naples-2024/images/partners/logo-smart-city-journal.png" loading="lazy" />
+            </picture>
+        </div>
         <div class='profile-details'>
             <h6 class='name'>The Smart City Journal</h6>
         </div>
@@ -372,12 +492,18 @@
         </div>
     </div>
 </div>
-<div
+<div id="item-20"
     class='grid-item org-bio exhibitor exhibitor pleiades'
+    href="#item-20"
     data-modal='20'
 >
     <div class='f-cat active'>
-        <img alt='' class='city-photo' src='https://www.fiware.org/fiware-summit/naples-2024/images/sponsors/logo-pleiades.png' loading='lazy' />
+        <div class='city-photo-container'>
+            <picture>
+               <source srcset="https://www.fiware.org/fiware-summit/naples-2024/images/sponsors/logo-pleiades.webp" type="image/webp"/>
+               <img alt="" class="city-photo" src="https://www.fiware.org/fiware-summit/naples-2024/images/sponsors/logo-pleiades.png" loading="lazy" />
+            </picture>
+        </div>
         <div class='profile-details'>
             <h6 class='name'>Pleiades</h6>
         </div>
@@ -391,12 +517,18 @@
         </div>
     </div>
 </div>
-<div
+<div id="item-21"
     class='grid-item org-bio exhibitor exhibitor teamdev'
+    href="#item-21"
     data-modal='21'
 >
     <div class='f-cat active'>
-        <img alt='' class='city-photo' src='https://www.fiware.org/fiware-summit/naples-2024/images/sponsors/logo-teamdev.png' loading='lazy' />
+        <div class='city-photo-container'>
+            <picture>
+               <source srcset="https://www.fiware.org/fiware-summit/naples-2024/images/sponsors/logo-teamdev.webp" type="image/webp"/>
+               <img alt="" class="city-photo" src="https://www.fiware.org/fiware-summit/naples-2024/images/sponsors/logo-teamdev.png" loading="lazy" />
+            </picture>
+        </div>
         <div class='profile-details'>
             <h6 class='name'>TeamDev</h6>
         </div>
